fix graphic z-index

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -71,6 +71,7 @@
 .townHallGraphic {
   width: 100%;
   transform: scale(1.65);
+  z-index: -999;
 }
 
 .demandsContainer {
